--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
     "request": "^2.88.0",
+    "socket.io": "^2.2.0",
     "typeorm": "^0.2.8"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "@types/multer": "^1.3.7",
     "@types/mysql": "^2.15.5",
     "@types/node": "^8.10.36",
+    "@types/socket.io": "^2.1.2",
     "@types/supertest": "^2.0.6",
     "concurrently": "^4.0.1",
     "http-server": "^0.11.1",
