--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "helmet": "^3.14.0",
+    "mongodb": "^3.1.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.14.1",
     "reflect-metadata": "^0.1.10",
     "request": "^2.88.0",
     "socket.io": "^2.2.0",
-    "typeorm": "^0.2.8"
+    "typeorm": "^0.2.15"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
